# myTUDAT

./: .gitignore
tudat/Tudat/: CMakeLists.txt
tudat/Tudat/Astrodynamics/BasicAstrodynamics/: physicalConstants.h
tudat/Tudat/Astrodynamics/SystemModels/: vehicleSystems.h
tudat/Tudat/Bislip/: CMakeLists.txt  bislip.h  bislipDecisionVectorEvaluation.cpp  bislipHeaders.h  bislipParameters.h  bislipPreviousConditions.h  bislipProblemInput.h  bislipUtilities.h  bislipVariables.cpp  bislipVariables.h  bislipVehicleSystems.h  updateGuidance.cpp
tudat/Tudat/InputOutput/: basicInputOutput.h
tudat/Tudat/JsonInterface/Propagation/: variable.h
tudat/Tudat/Mathematics/Interpolators/: createInterpolator.h
tudat/Tudat/Mathematics/RootFinders/: bisection.h
tudat/Tudat/SimulationSetup/EnvironmentSetup/: body.h  createAerodynamicControlSurfaces.h
tudat/Tudat/SimulationSetup/PropagationSetup/: createEnvironmentUpdater.cpp  dynamicsSimulator.h  propagationOutput.cpp  propagationOutput.h  propagationOutputSettings.cpp  propagationOutputSettings.h  propagationTermination.cpp
tudatApplications/Space4ErrBody.git/Space4ErrBody_0/Space4ErrBody_Headers/: getPagmoAlgorithm.h
tudatApplications/Space4ErrBody.git/Space4ErrBody_0/Space4ErrBody_Headers/executables/: HORUSaeroCoeffFileList.txt  optimization_settingsValues.txt
tudatApplications/Space4ErrBody.git/Space4ErrBody_0/matlab/: Contruct_File_Paths.m  Contruct_File_prefix.m  Get_Trajectories.m  Load_Data.m  Path_Prep.m  Read_Folder_Content.m  analysis.m  createAeroCoeffInterpolator.m  entryCorridor_mechanical.m  plotCompoundRelations.m  plotInterpolators.m  plotTimeHistories_AeroAngles.m  plotTimeHistories_AeroCoefficients.m  plotTimeHistories_EngineOps.m  plotTimeHistories_Mechanical.m  plotTimeHistories_SpatialAwareness.m  plotTimeHistories_Thermo.m  plotTrajectories.m  plotsomestuff.m
